tests/baselines/reference/ES5SymbolType1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5SymbolType1.ts(2,1): error TS2454: Variable 's' is used before being assigned.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5SymbolType1.ts (1 errors) ====
    var s: symbol;
    s.toString();
    ~
!!! error TS2454: Variable 's' is used before being assigned.